--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "namaste-react",
   "version": "1.0.0",
   "description": "this is namaste react ",
-  
   "scripts": {
-    "start":" parcel index.html",
-    "build":"parcel build index.html",
+    "start": " parcel index.html",
+    "build": "parcel build index.html",
     "test": "jest"
   },
   "repository": {
@@ -30,9 +29,10 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1"
   },
-  " browserslist":[
+  " browserslist": [
     "  Last 2 version"
   ]
 }
