--- a/package.json
+++ b/package.json
@@ -1,40 +1,49 @@
 {
   "name": "namaste-react",
+  "description": "- install redux toolkit, recux-react\r - build our store\r - connect out store to app\r - slice(cart slice)\r - dispatch(action)\r - selector",
   "version": "1.0.0",
-  "description": "this is namaste react ",
+  "main": "app.js",
+  "devDependencies": {
+    "@babel/cli": "^7.24.7",
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@testing-library/react": "^16.0.0",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "parcel": "^2.12.0",
+    "postcss": "^8.4.39",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.4.4"
+  },
   "scripts": {
-    "start": " parcel index.html",
+    "start": "parcel index.html",
     "build": "parcel build index.html",
     "test": "jest"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Nandini675/namaste-react.git().git"
+    "url": "git+https://github.com/Nandini675/namaste-react.git"
   },
   "keywords": [
-    "react",
-    "nandini",
-    "namaste",
-    "react"
+    "[\"nandini\"",
+    "\"react\"",
+    "\"namaste\"]"
   ],
-  "author": "nandini sharma",
+  "author": "\"nandini sharma\"",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Nandini675/namaste-react.git()/issues"
+    "url": "https://github.com/Nandini675/namaste-react/issues"
   },
-  "homepage": "https://github.com/Nandini675/namaste-react.git()#readme",
-  "devDependencies": {
-    "parcel": "^2.12.0",
-    "postcss": "^8.4.38",
-    "process": "^0.11.10",
-    "tailwindcss": "^3.4.4"
-  },
+  "homepage": "https://github.com/Nandini675/namaste-react#readme",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.1"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.24.1"
   },
-  " browserslist": [
-    "  Last 2 version"
+  "browserslist": [
+    "Last 2 version"
   ]
 }
